--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://blog.cloudflare.com/cloudflare-workers-recipe-exchange/">Cloudflare Workers Recipe Exchange</a>
+                                    <a href="https://www.polygon.com/2018/6/4/17425686/lgbtq-creators-youtube-homophobic-ads-demonetization-pride">LGBTQ creators call out YouTube for ongoing homophobic ads, demonetization</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17237526">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17240946">
                                         
-                                            17 comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jgrahamc">jgrahamc</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528206536"
+                                            href="https://news.ycombinator.com/user?id=knuththetruth">knuththetruth</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528225534"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    30 points
+                                    22 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.trulia.com/blog/why-my-monster-commute-is-worth-it/">Super Commuters Explain Why Their Neighborhoods Are Worth It</a>
+                                    <a href="https://www.data.gov/">Data.gov, a catalogue of public government data</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17241479">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17239486">
                                         
-                                            9 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528228849"
+                                            href="https://news.ycombinator.com/user?id=matthberg">matthberg</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528217140"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    12 points
+                                    15 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528277404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528278004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
