--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.data.gov/">Data.gov, a catalogue of public government data</a>
+                                    <a href="https://www.trulia.com/blog/why-my-monster-commute-is-worth-it/">Super Commuters Explain Why Their Neighborhoods Are Worth It</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17239486">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17241479">
                                         
-                                            comments
+                                            9 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=matthberg">matthberg</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528217140"
+                                            href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528228849"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    14 points
+                                    12 points
                                 </span>
                             </td>
                         </tr>
@@ -347,7 +347,7 @@
                                             href="https://news.ycombinator.com/user?id=el_duderino">el_duderino</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528212423"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    12 points
+                                    13 points
                                 </span>
                             </td>
                         </tr>
@@ -444,7 +444,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528277404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528278004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
