--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -539,7 +539,7 @@
                                             href="https://news.ycombinator.com/user?id=slapshot">slapshot</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528213490"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    101 points
+                                    102 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theverge.com/circuitbreaker/2018/6/5/17428806/samsung-chromebook-plus-linux-app-support-beta-launched">Samsung’s Chromebook Plus now supports Linux apps</a>
+                                    <a href="https://www.anandtech.com/show/12785/arm-cortex-a76-cpu-unveiled-7nm-powerhouse">Arm unveils 7nm Cortex-A76 CPU</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17237183">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17234537">
                                         
-                                            51 comments
+                                            59 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=artsandsci">artsandsci</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528203401"
+                                            href="https://news.ycombinator.com/user?id=signa11">signa11</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528166426"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    113 points
+                                    163 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528287605" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528288205" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
