--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -485,7 +485,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17236039">
                                         
-                                            251 comments
+                                            253 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=NoB4Mouth">NoB4Mouth</a></strong> &nbsp;•&nbsp;
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.alexa.com/topsites/countries/US">Reddit just passed Facebook as #3 most popular website in US</a>
+                                    <a href="https://nancysbraintalks.mit.edu/course/9-11-the-human-brain">MIT 9.11: The Human Brain (Spring 2018)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17189905">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17216634">
                                         
-                                            583 comments
+                                            67 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=Mahn">Mahn</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527702803"
+                                            href="https://news.ycombinator.com/user?id=indescions_2018">indescions_2018</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527976883"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    1359 points
+                                    700 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528307405" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528308005" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
