--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.cbsnews.com/news/sen-jeff-merkley-says-images-of-migrant-processing-center-seared-in-my-mind/">Sen. Jeff Merkley says images of migrant processing center “seared” in his mind</a>
+                                    <a href="https://rawcdn.githack.com/8x-protocol/whitepaper/master/latest.pdf">Decentralised recurring payments on Ethereum through the use of stable coins [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17244489">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17246354">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=stephengillie">stephengillie</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528261601"
+                                            href="https://news.ycombinator.com/user?id=kermankohli">kermankohli</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528287339"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    17 points
+                                    8 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528309805" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528310405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
