--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -239,6 +239,30 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://developer.apple.com/macos/whats-new/">Apple: Deprecation of OpenGL and OpenCL</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17244781">
+                                        
+                                            6 comments
+                                        </a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=mwuertinger">mwuertinger</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528266502"
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    10 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://www.theguardian.com/technology/2016/mar/04/microsoft-monopolise-pc-games-development-epic-games-gears-of-war">Microsoft wants to monopolise games development on PC. We must fight it</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -372,7 +396,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528318203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528318803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
