--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/view/articles/2018-06-06/google-s-decision-to-ditch-project-maven-is-a-grave-error">Google Walks Away from America's Security</a>
+                                    <a href="https://medium.com/@leftoutside/please-dont-rate-your-waitress-4-5-1f19ef3c09f8">Please don’t rate your waitress 4/5</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17246874">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17244852">
                                         
-                                            9 comments
+                                            20 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528291170"
+                                            href="https://news.ycombinator.com/user?id=thisisit">thisisit</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528267565"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    13 points
+                                    23 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528321804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528322404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
