--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://montrealaisymposium.com/">Montréal AI Symposium</a>
+                                    <a href="https://developer.apple.com/macos/whats-new/">Apple: Deprecation of OpenGL and OpenCL</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17242561">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17244781">
                                         
-                                            comments
+                                            6 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=GChevalier">GChevalier</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528237026"
+                                            href="https://news.ycombinator.com/user?id=mwuertinger">mwuertinger</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528266502"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    14 points
+                                    10 points
                                 </span>
                             </td>
                         </tr>
@@ -324,7 +324,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528323004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528323604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
