--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -347,7 +347,7 @@
                                             href="https://news.ycombinator.com/user?id=ozanonay">ozanonay</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528303175"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    377 points
+                                    380 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theguardian.com/science/2018/jun/04/doctors-hail-world-first-as-womans-advanced-breast-cancer-is-eradicated">Doctors hail world first as woman’s advanced breast cancer is eradicated</a>
+                                    <a href="https://phabricator.wikimedia.org/">Phabricator – GitHub Alternative written in PHP used by the Wikimedia Foundation</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17228517">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17245649">
                                         
-                                            78 comments
+                                            144 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528125236"
+                                            href="https://news.ycombinator.com/user?id=TekMol">TekMol</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528278314"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    337 points
+                                    338 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528324203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528324803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
