--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -227,7 +227,7 @@
                                             href="https://news.ycombinator.com/user?id=confiscate">confiscate</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528234216"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    474 points
+                                    475 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.consumeraffairs.com/news/tesla-blames-drivers-who-wreck-its-cars-but-wont-hand-over-crash-data-without-a-court-order-053018.html">Tesla won’t give drivers their own crash data without a court order</a>
+                                    <a href="https://blog.bradfieldcs.com/performance-reviews-are-a-waste-of-time-87c88d7553b4">Performance Reviews Are a Waste of Time</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17237792">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17248630">
                                         
-                                            276 comments
+                                            250 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528208287"
+                                            href="https://news.ycombinator.com/user?id=ozanonay">ozanonay</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528303175"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     397 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528327204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528327803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
