--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.bbc.com/capital/story/20180605-does-the-way-you-speak-give-away-how-much-you-earn">Does the way you speak reveal how much you earn?</a>
+                                    <a href="https://engineering.gosquared.com/salesforce-rest-api-integration">How to build a basic Salesforce REST API integration</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17245630">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17246085">
                                         
-                                            10 comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=QueensGambit">QueensGambit</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528277996"
+                                            href="https://news.ycombinator.com/user?id=jamesjgill">jamesjgill</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528284438"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    9 points
+                                    8 points
                                 </span>
                             </td>
                         </tr>
@@ -324,7 +324,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528335603" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528336204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
