--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -437,13 +437,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17250697">
                                         
-                                            40 comments
+                                            42 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mlejva">mlejva</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528316094"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    227 points
+                                    229 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.calcalistech.com/ctech/articles/0,7340,L-3739390,00.html">Tactics of Psy-Group, Black Cube Revealed in Canadian Court Battle</a>
+                                    <a href="https://blog.cloudflare.com/welcome-hidden-resolver/">Introducing DNS Resolver for Tor</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17226900">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17246466">
                                         
-                                            47 comments
+                                            80 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=asafshalev">asafshalev</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528113338"
+                                            href="https://news.ycombinator.com/user?id=XzetaU8">XzetaU8</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528288121"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     213 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528336804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528337405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
