--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/articles/2018-06-04/github-billionaires-will-own-more-microsoft-stock-than-its-ceo">GitHub Founders Will Own More Microsoft Stock Than Its CEO</a>
+                                    <a href="https://www.wsj.com/articles/toshiba-to-close-the-book-on-its-laptop-unit-1528175106">Toshiba to Close the Book on Its Laptop Unit</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17234371">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17237567">
                                         
-                                            111 comments
+                                            107 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=rattray">rattray</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528163828"
+                                            href="https://news.ycombinator.com/user?id=jseliger">jseliger</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528206864"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     106 points
                                 </span>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528339804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528340404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
