--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -287,6 +287,30 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://rawcdn.githack.com/8x-protocol/whitepaper/master/latest.pdf">Decentralised recurring payments on Ethereum through the use of stable coins [pdf]</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17246354">
+                                        
+                                            comments
+                                        </a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=kermankohli">kermankohli</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528287339"
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    9 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://developer.apple.com/macos/whats-new/">Apple: Deprecation of OpenGL and OpenCL</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -348,7 +372,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528341605" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528342203" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
