--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -539,7 +539,7 @@
                                             href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528287882"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    286 points
+                                    287 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://twitter.com/gitlab/status/1003764673454342144">Xcode 10 is now integrated with GitLab</a>
+                                    <a href="https://www.remoteonly.org/">Remote Only</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17233208">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17251471">
                                         
-                                            72 comments
+                                            113 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=faltad">faltad</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528151228"
+                                            href="https://news.ycombinator.com/user?id=omot">omot</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528322584"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    265 points
+                                    266 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528344003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528344604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
