--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://bradfrost.com/blog/link/replacing-jquery-with-vue-js-no-build-step-necessary/">React is the new jQuery</a>
+                                    <a href="https://bugs.openjdk.java.net/browse/JDK-8204322">Java: "+=" applied to String operands can provoke side effects</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17211283">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17248095">
                                         
-                                            197 comments
+                                            92 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=brennankreiman">brennankreiman</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527894417"
+                                            href="https://news.ycombinator.com/user?id=javinpaul">javinpaul</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528300175"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     222 points
                                 </span>
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528345804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528346405" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
