--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -221,7 +221,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17221527">
                                         
-                                            1430 comments
+                                            1431 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=miguelrochefort">miguelrochefort</a></strong> &nbsp;•&nbsp;
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=voska">voska</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528210099"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    1478 points
+                                    1479 points
                                 </span>
                             </td>
                         </tr>
@@ -419,7 +419,7 @@
                                             href="https://news.ycombinator.com/user?id=dazhbog">dazhbog</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528293229"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    670 points
+                                    674 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://ekeler.com/game-boy-camera-canon-ef-mount/">Game Boy Camera Canon EF Lens Mount</a>
+                                    <a href="https://blog.bradfieldcs.com/performance-reviews-are-a-waste-of-time-87c88d7553b4">Performance Reviews Are a Waste of Time</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17217827">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17248630">
                                         
-                                            30 comments
+                                            274 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=rainbowmverse">rainbowmverse</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527998189"
+                                            href="https://news.ycombinator.com/user?id=ozanonay">ozanonay</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528303175"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     490 points
                                 </span>
@@ -609,7 +609,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528347004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528347604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
