--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://blog.bradfieldcs.com/performance-reviews-are-a-waste-of-time-87c88d7553b4">Performance Reviews Are a Waste of Time</a>
+                                    <a href="http://ekeler.com/game-boy-camera-canon-ef-mount/">Game Boy Camera Canon EF Lens Mount</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17248630">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17217827">
                                         
-                                            274 comments
+                                            30 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ozanonay">ozanonay</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528303175"
+                                            href="https://news.ycombinator.com/user?id=rainbowmverse">rainbowmverse</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527998189"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    488 points
+                                    490 points
                                 </span>
                             </td>
                         </tr>
@@ -245,7 +245,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17242270">
                                         
-                                            185 comments
+                                            186 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=confiscate">confiscate</a></strong> &nbsp;•&nbsp;
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528347004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528347604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
