--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.cbsnews.com/news/sen-jeff-merkley-says-images-of-migrant-processing-center-seared-in-my-mind/">Sen. Jeff Merkley says images of migrant processing center “seared” in his mind</a>
+                                    <a href="https://www.theverge.com/2018/5/30/17409112/digital-license-plates-california-reviver-auto">Digital license plates finally hit the road in California</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17244489">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17244564">
                                         
-                                            comments
+                                            9 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=stephengillie">stephengillie</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528261601"
+                                            href="https://news.ycombinator.com/user?id=ALee">ALee</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528263103"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    17 points
+                                    18 points
                                 </span>
                             </td>
                         </tr>
@@ -348,7 +348,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528347604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528348204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
