--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -365,13 +365,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17247088">
                                         
-                                            58 comments
+                                            59 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=MarkusWinand">MarkusWinand</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528292798"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    160 points
+                                    161 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://toddwschneider.com/posts/nyc-subway-data-analysis/">Using Countdown Clock Data to Understand the New York City Subway</a>
+                                    <a href="https://www.bloomberg.com/news/articles/2018-06-06/github-is-microsoft-s-7-5-billion-undo-button">GitHub Is Microsoft’s $7.5B Undo Button</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17246538">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17250963">
                                         
-                                            62 comments
+                                            57 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=lil_tee">lil_tee</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528288764"
+                                            href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528317973"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    139 points
+                                    141 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528347604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528348204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
