--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theverge.com/2018/5/30/17409112/digital-license-plates-california-reviver-auto">Digital license plates finally hit the road in California</a>
+                                    <a href="https://rdipietro.github.io/friendly-intro-to-cross-entropy-loss/">A Friendly Introduction to Cross-Entropy Loss (2016)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17244564">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17246287">
                                         
-                                            9 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ALee">ALee</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528263103"
+                                            href="https://news.ycombinator.com/user?id=mwulf">mwulf</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528286748"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    18 points
+                                    13 points
                                 </span>
                             </td>
                         </tr>
@@ -263,19 +263,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://rdipietro.github.io/friendly-intro-to-cross-entropy-loss/">A Friendly Introduction to Cross-Entropy Loss</a>
+                                    <a href="https://www.twitch.tv/magicleap">Meet Magic Leap One – Twitch</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17246287">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17247840">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mwulf">mwulf</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528286748"
+                                            href="https://news.ycombinator.com/user?id=evo_9">evo_9</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528298460"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    11 points
+                                    9 points
                                 </span>
                             </td>
                         </tr>
@@ -348,7 +348,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528348204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528348804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
