--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -221,7 +221,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17251792">
                                         
-                                            11 comments
+                                            12 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=raleighm">raleighm</a></strong> &nbsp;•&nbsp;
@@ -539,7 +539,7 @@
                                             href="https://news.ycombinator.com/user?id=mwulf">mwulf</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528286748"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    14 points
+                                    17 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/view/articles/2018-06-06/google-s-decision-to-ditch-project-maven-is-a-grave-error">Google Walks Away from America's Security</a>
+                                    <a href="http://care.diabetesjournals.org/content/17/2/152">A Mathematical Model for Computing the Total Area Under a Curve (1993)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17246874">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17250073">
                                         
-                                            12 comments
+                                            8 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528291170"
+                                            href="https://news.ycombinator.com/user?id=benstrumental">benstrumental</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528312035"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    13 points
+                                    9 points
                                 </span>
                             </td>
                         </tr>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528349403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528350005" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
