--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.reddit.com/r/linuxmasterrace/comments/8oxjno/for_all_the_people_who_left_github_and_migrated/?st=JI2OWDTJ&sh=e6f55f60">Gitlab runs on Azure</a>
+                                    <a href="https://www.bloomberg.com/view/articles/2018-06-06/google-s-decision-to-ditch-project-maven-is-a-grave-error">Google Walks Away from America's Security</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17244624">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17246874">
                                         
-                                            15 comments
+                                            12 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=hajderr">hajderr</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528264158"
+                                            href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528291170"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    18 points
+                                    13 points
                                 </span>
                             </td>
                         </tr>
@@ -239,17 +239,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theverge.com/2018/5/30/17409112/digital-license-plates-california-reviver-auto">Digital license plates finally hit the road in California</a>
+                                    <a href="https://www.reddit.com/r/linuxmasterrace/comments/8oxjno/for_all_the_people_who_left_github_and_migrated/?st=JI2OWDTJ&sh=e6f55f60">Gitlab runs on Azure</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17244564">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17244624">
                                         
-                                            9 comments
+                                            15 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ALee">ALee</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528263103"
+                                            href="https://news.ycombinator.com/user?id=hajderr">hajderr</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528264158"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     18 points
                                 </span>
@@ -348,7 +348,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528349403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528350005" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
