--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://nautil.us/issue/60/searches/does-theranos-mark-the-peak-of-the-silicon-valley-bubble">We Shouldn’t Be Surprised at the Theranos Fraud</a>
+                                    <a href="https://fermatslibrary.com/s/the-beginning-of-the-monte-carlo-method">The Beginning of the Monte Carlo Method (1987)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17252311">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17239599">
                                         
-                                            92 comments
+                                            30 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528331391"
+                                            href="https://news.ycombinator.com/user?id=mgdo">mgdo</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528217779"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    117 points
+                                    119 points
                                 </span>
                             </td>
                         </tr>
@@ -407,7 +407,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.wsj.com/articles/short-termism-is-harming-the-economy-1528336801">Short-Termism Is Harming the Economy</a>
+                                    <a href="https://www.wsj.com/articles/short-termism-is-harming-the-economy-1528336801">Short-Termism Is Harming the Economy?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
@@ -492,7 +492,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528351203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528351804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
