--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theguardian.com/science/2018/jun/04/doctors-hail-world-first-as-womans-advanced-breast-cancer-is-eradicated">Doctors hail world first as woman’s advanced breast cancer is eradicated</a>
+                                    <a href="https://www.remoteonly.org/">Remote Only</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17228517">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17251471">
                                         
-                                            78 comments
+                                            147 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528125236"
+                                            href="https://news.ycombinator.com/user?id=omot">omot</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528322584"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     338 points
                                 </span>
@@ -615,7 +615,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528351203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528351804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
